feature: add LIST orders with Lambda managed instances examle (#1043)
---------
